--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "koa-static": "^4.0.2",
     "mongoose": "^5.1.3",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "cloudinary": "^1.11.0"
   }
 }
